src/css/template.css
@import "includes/vars.css";

@import "includes/verb.css";

.small {
    font-size: var(--fontSizeSmall);
}

.thin {
    font-weight: var(--fontWeightLight);
}

.header,
.footer {
    box-sizing: border-box;
    display: block;
    font-family: var(--fontFamilyVerb);
    font-size: var(--fontSize);
    line-height: var(--lineHeightMedium);
    margin: 0;
    padding: 0;

    & *,
    & *::before,
    & *::after {
        box-sizing: inherit;
    }

    & ::placeholder {
        color: var(--colorTextLight);
    }

    & :any-link {
        color: inherit;
        text-decoration: underline;
    }

    & img {
        border: none;
        vertical-align: middle;
    }
}

.header {
    & .skip {
        background: var(--colorGrayLight);
        left: 50%;
        padding: 0 var(--widthSmall);
        position: absolute;
        top: calc(-1 * var(--widthLarge));
        transform: translateX(-50%);
        transition: top 1s ease-out;
        z-index: 3;

        &:focus {
            top: 0;
            transition: top 0.1s ease-in;
        }
    }

    & .top {
        & .logo,
        & .unit {
            display: inline-block;
            margin: 0;
            padding: 0;
            vertical-align: top;
        }

        & .logo {
            margin: 0 15px 0 0;

            & img {
                height: 18px;
                width: 60px;
            }
        }

        & .unit {
            font-size: var(--fontSizeLarge);
            font-weight: var(--fontWeightBold);
            line-height: 1;
            text-rendering: optimizeLegibility;
            -webkit-font-smoothing: antialiased;
            vertical-align: bottom;
        }
    }

    & .nav .site {
        font-size: var(--fontSizeSite);
        font-weight: var(--fontWeight);
        margin: 0;
        padding: 0;
    }
}

@media screen {
    .body {
        display: flex;
        flex-direction: column;
        height: 100vh;
        margin: 0;
        padding: 0;
    }

    .container {
        margin: 0 auto;
        padding: 0 var(--widthMedium);
        position: relative;
    }

    .header {
        background: var(--colorGrayLight);
        color: var(--colorBrownDark);

        & [data-toggle],
        & :any-link {
            color: inherit;
            text-decoration: none;

            &:hover,
            &:focus {
                color: var(--colorBrown);
                text-decoration: underline;
            }
        }

        & .top {
            background:
                var(--colorOrange)
                linear-gradient(
                    to top,
                    var(--colorOrangeDark) 0%,
                    var(--colorOrange) 100%
                );
            box-shadow: 0 0 calc(var(--widthMedium) / 2) 0 var(--colorShadow);
            color: var(--colorWhite);
            margin: 0;
            padding: var(--widthSmall) 0;

            & .unit .thin {
                display: none;
            }
        }

        & .nav {
            display: block;
            margin: 0;
            min-height: var(--widthLarge);
            padding: calc(var(--widthMedium) / 2) 0;

            & .menu {
                margin: 0;
                padding: 0;

                & ul {
                    list-style: none;
                    margin: 0 calc(var(--widthMedium) / -2);
                    padding: 0;

                    & > li {
                        cursor: default;
                        margin: 0 calc(var(--widthMedium) / 2);
                        padding: var(--widthSmall) 0;

                        & > [aria-expanded="false"]::after {
                            content: " ▼";
                            font-size: var(--fontSizeMedium);
                        }

                        & > [aria-expanded="true"]::after {
                            content: " ▲";
                            font-size: var(--fontSizeMedium);
                        }
                    }
                }

                & form {
                    margin: 0;
                    padding: var(--widthSmall) 0;

                    & > div {
                        display: flex;
                        font-size: var(--fontSizeMedium);
                        line-height: var(--lineHeightLarge);
                        max-width: 288px;

                        & > button,
                        & > [type="text"] {
                            background: var(--colorWhite);
                            border: 1px solid var(--colorBrown);
                            color: inherit;
                            flex: 1 0 auto;
                            font: inherit;
                            margin: 0;
                            padding: 0 var(--widthSmall);
                        }

                        & > button {
                            background: var(--colorBrown);
                            color: var(--colorWhite);
                            cursor: pointer;
                            flex: 0 0 auto;

                            & > span {
                                margin: 0 4px;

                                &::before {
                                    background: url("../svg/search.svg") no-repeat;
                                    content: "";
                                    display: inline-block;
                                    height: 12px;
                                    width: 12px;
                                    vertical-align: middle;
                                }
                            }
                        }
                    }

                    & ul > li {
                        font-size: var(--fontSizeSmall);
                        padding-bottom: 0;
                    }
                }

                & .user div {
                    font-size: var(--fontSizeSmall);
                }

                & ul > li > ul {
                    font-size: var(--fontSizeMedium);
                    list-style: disc;
                    margin: 0;
                    padding: 0 0 0 var(--widthLarge);

                    & > li {
                        display: list-item;
                        margin: 0;
                        padding: var(--widthSmall) 0;
                    }
                }
            }

            & .toggle {
                font-size: var(--fontSizeSite);
                position: absolute;
                text-decoration: none;
                top: 0;
                right: var(--widthMedium);
                z-index: 2;
            }
        }
    }

    .main {
        flex: 1 0 auto;

        & > .container {
            margin: var(--widthMedium) auto;
        }
    }

    .footer {
        background: var(--colorBrownDark);
        color: var(--colorWhite);
        padding: var(--widthMedium) 0;

        &::after {
            clear: both;
            content: "";
            display: block;
        }

        & :any-link:hover,
        & :any-link:focus {
            color: var(--colorOrangeLight);
        }

        & p {
            margin: calc(var(--widthMedium) / 2) 0;
        }

        & .gray {
            background: var(--colorGrayLight);
            color: var(--colorText);
            font-size: var(--fontSizeMedium);
            margin: calc(-1 * var(--widthMedium)) 0 var(--widthMedium) 0;
            padding: var(--widthMedium) 0;
            text-align: center;
        }

        & .report a::before {
            background: url("../svg/access.svg") no-repeat;
            background-size: 14px 16px;
            content: "";
            display: inline-block;
            height: 16px;
            width: calc(14px + var(--widthSmall));
            vertical-align: middle;
        }
    }
}

@media screen and (--breakpointSmall) {
    .container {
        padding: 0;
        width: 724px;
    }

    .header {
        & .top {
            padding: 11px 0;

            & .logo img {
                height: 58px;
                width: 192px;
            }

            & .unit {
                border-left: 1px solid var(--colorOrangeBorder);
                font-size: var(--fontSizeUnit);
                line-height: inherit;
                margin-top: 2px;
                padding: 7px 14px;
            }
        }

        & .nav {
            & .site {
                font-size: var(--fontSizeUnit);
            }

            & .menu {
                & ul > li {
                    display: inline-block;
                    position: relative;

                    & > ul {
                        background: var(--colorGrayLight);
                        border-radius: var(--widthSmall);
                        box-shadow: 0 1px 2px 0 var(--colorShadow);
                        color: var(--colorBrownDark);
                        left: 0;
                        min-width: 200px;
                        padding: var(--widthSmall);
                        padding-left: var(--widthLarge);
                        position: absolute;
                        top: var(--widthLarge);
                        width: 100%;
                        z-index: 2;
                    }
                }
            }

            & .toggle {
                display: none;
            }
        }
    }

    .footer > .container > div {
        float: left;
        width: 50%;

        & + div {
            float: right;
        }
    }
}

@media screen and (--breakpointMedium) {
    .container {
        width: 940px;
    }

    .header .nav .menu form {
        bottom: 0;
        position: absolute;
        right: 0;
        width: 25%;
    }

    .header .nav .menu .user {
        bottom: 0;
        position: absolute;
        right: 0;
        text-align: right;
    }
}

@media screen and (--breakpointLarge) {
    .container {
        width: 1170px;
    }

    .header .top .unit .thin {
        display: inline;
    }

    .header .nav .menu form {
        width: 20%;
    }
}

@media print {
    .header,
    .footer {
        & :any-link {
            text-decoration: none;
        }

        & img {
            filter: invert(100%);
        }
    }

    .header .nav .toggle,
    .header .nav .menu,
    .footer > .container > * + * {
        display: none;
    }

    .header {
        & .top {
            border-bottom: 1px solid;
            padding-bottom: var(--widthSmall);

            & .logo img {
                height: 30px;
                width: 100px;
            }
        }

        & .top .unit,
        & .nav .site {
            font-size: var(--fontSizeUnit);
        }
    }

    .footer {
        border-top: 1px solid;
        font-size: var(--fontSizeSmall);
        margin-top: var(--widthMedium);
        padding-top: var(--widthSmall);

        & p {
            display: none;

            & + p {
                display: block;
                margin: 0;
            }

            & br {
                content: "";
            }

            & br::after {
                content: " • ";
            }

            & strong {
                font-weight: var(--fontWeight);
            }
        }
    }
}

